@@ -2,7 +2,7 @@
 <beanlist xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/beanlist.xsd">
    <service name="ConfigBroker">
-      <file name="${TWEEK_BASE_DIR}/bin/beans/jccl_config.jar"
+      <file name="${JCCL_BASE_DIR}/share/jccl/beans/jccl_config.jar"
             class="org.vrjuggler.jccl.config.ConfigBrokerImpl" />
    </service>
 </beanlist>
